commit al master del blogpost

--- a/prueba.html
+++ b/prueba.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogpost html</title>
+    <link rel="stylesheet" href="./css/estilos.css" />
 </head>
 <body>
-    <h1>Titulo</h1>
-    <p>este es un nuevo post</p>
+    <div id="container">
+      <div id="post">
+        <h1>Titulo del post</h1>
+        <p>este es un nuevo pos que explica la forma
+            de usar el repot</p>
+      </div>
+    </div>
 </body>
 </html>
