--- a/prueba.html
+++ b/prueba.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
       <div id="post">
         <h1>Titulo del post</h1>
         <p>este es un nuevo pos que explica la forma
