--- a/prueba.html
+++ b/prueba.html
@@ -13,6 +13,8 @@
         <h1>Titulo del post</h1>
         <p>este es un nuevo pos que explica la forma
             de usar el repot</p>
+        <p>parrafo adicional de master</p>
+        <p>otro parrafo</p>
       </div>
     </div>
 </body>
